--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,23 @@
 services:
+  mysql:
+    image: mysql:8.0
+    container_name: mizu-mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: mizuflow
+    ports:
+      - "3307:3306"
+    volumes:
+      - ./mysql/data:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d
+    mem_limit: 512m
+    command:
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
   etcd:
     image: quay.io/coreos/etcd:v3.5.9
-    container_name: delta-etcd
+    container_name: mizu-etcd
     ports:
       - "2379:2379"
       - "2380:2380"
@@ -20,8 +36,16 @@ services:
       - --logger=zap
     mem_limit: 256m 
     networks:
-      - delta-network
+      - mizu-network
+  redis:
+    image: redis:7.0
+    container_name: mizu-redis
+    ports:
+      - "6379:6379"
+    mem_limit: 128m
+    networks:
+      - mizu-network
 
 networks:
-  delta-network:
+  mizu-network:
     driver: bridge
